<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tvUsername"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txfUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/txfUsernameHint">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSettingsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tvSettingsInfo"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>