<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbtngDomainChoose"
        android:checkedButton="@+id/rbtnSuggestionDomain"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnSuggestionDomain"
            android:text="@string/rbtnSuggestionDomain" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnCustomDomain"
            android:text="@string/rbtnCustomDomain" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddDomains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btnChooseSelectedDomain" />

    <FrameLayout
        android:id="@+id/content_frame_domain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rbtngDomainChoose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnAddDomains">

    </FrameLayout>

</RelativeLayout>
